This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------

2010-06-25
   * developer.xml: Document new error checking funtion CheckDataType.
   * variables.list: Clarify that the data array counters (num_data_rows,
     num_recs, records_per_group, total_records) do include all entries
     in the data array, including label and independent variable value.
     Correct description of num_data_rows: it is the number of points or
     point sets, not the number of plot lines.

2010-06-20
   * variables.list: Clarify the difference between variables max_x, max_y,
     min_x, and min_y and the variables plot_max_x, plot_max_y, plot_min_x,
     and plot_min_y. Add reference to SetPlotAreaWorld for the plot_* vars.

2010-06-13
   Documentation for truecolor images (introduced at phplot-5.1.1):
   * concepts.xml: New definitions, new section and subsections on Truecolor.
   * developer.xml: Changes to internal functions for truecolor: SetIndexColor,
     SetIndexDarkColor, SetRGBColor.
   * examples.xml: New example using truecolor to make a photo histogram
     overlay.
   * functions.xml: Link to new constructor; link to new truecolor section.
   * reference.xml: Document new constructor PHPlot_truecolor,
     cross-reference to base constructor, and add note on background image
     type. Document new alpha parameters to SetDataColors, and that
     SetRGBArray takes 3 or 4 element color component arrays.
   * variables.list: New internal variable data_colors_alpha
   * Makefile: removed unused 'dist' target (if you want a source
     distribution, just "make allclean" and pack up the whole directory);
     explicitly list the required files in images/*; fix verbosity; change